# archive_me_plz

./: .gitignore  Cargo.toml  LICENSE-MIT  LICENSE.txt  README.md  build.rs  rust-toolchain.toml
.github/: _publish.yml
.github/workflows/: build.yml  docs.yml  draft.yml  format.yml  test.yml
src/: error.rs  filetypes.rs  lib.rs  main.rs  parser.rs  prelude.rs
src/file_handling/: mod.rs  mover.rs  pre_processor.rs  processor.rs
