[package]
name = "archive_me_plz"
version = "0.1.0"
edition = "2021"

# For running the main server as a watch call
# cargo watch -q -c -w src/ -x run

[dependencies]
chrono = "0.4.39"
futures = "0.3.31"

rayon = "1.10.0"
thiserror = "2.0.7"
tokio = { version = "1.42.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# async-trait = "0.1.80"
# itertools = "0.13.0"
# log = "0.4.21"

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1

[profile.dev]
opt-level = 1
codegen-units = 256
incremental = true

[profile.release]
opt-level = 3
codegen-units = 1
debug = "none"
# strip = "symbols" # Leave off @ w
debug-assertions = false
incremental = true

lto = "fat"
# panic = "unwind"
