cargo-features = ["codegen-backend"]

[package]
name = "archive_me_plz"
authors = ["MrDwarf7", "Blake B. <github.com/MrDwarf7>"]
version = "1.0.0"
edition = "2024"
description = "A simple CLI tool to mass archive files and directories"
license = "MIT"
readme = "README.md"

build = "build.rs"

[package.metadata.winresource]
OriginalFilename = "archive_me_plz.exe"
FileDescription = "A simple CLI tool to mass archive files and directories"
LegalCopyright = "Copyright © 2025 by Blake B. @github.com/MrDwarf7"
#CompanyName = "https://github.com/MrDwarf7"

# For running the main server as a watch call
# cargo watch -q -c -w src/ -x run

[target.'cfg(windows)'.build-dependencies]
windres = "0.2"

[build-dependencies]
winresource = "0.1.19"
windres = "0.2.2"
winapi = { version = "0.3.9" }

[dependencies]
anstyle = "1.0.10"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
futures = "0.3.31"

rayon = "1.10.0"
thiserror = "2.0.7"
tokio = { version = "1.42.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1

[profile.dev]
opt-level = 1
codegen-units = 256
incremental = true

codegen-backend = "cranelift"

[profile.release]
opt-level = 3
codegen-units = 1
debug = "none"
debug-assertions = false
incremental = true

# trim-paths = "all"
#rustflags = ["-Zthreads=16" ]

# strip = "symbols" # Leave off @ w
# lto = "fat" ## Can't use with cranelift yet
# panic = "unwind"
